--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Sofyan Sahrom / Repository"
 title_separator          : "-"
 name                     : &name "Sofyan Sahrom"
 description              : &description "Where the smart_mamat lives online"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://github-sofyan.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "GitHub-Sofyan/GitHub-Sofyan.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
