--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sofyan Sahrom"
   avatar           : "profile.png"
-  bio              : "PhD Candidate, Edith Cowan University | Athletic Development Specialist | Sports Scientist | Data Scientist | Passionate about maximising the use of Data"
+  bio              : "PhD Candidate, Edith Cowan University | Athletic Development Specialist | Sports Scientist | Data Scientist | Passionate about maximising the use of Data in Sport"
   location         : "Perth, Western Australia"
   employer         : "Edith Cowan University"
   googlescholar    : 
