--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Sofyan Sahrom / Repository"
+title                    : "Sofyan Sahrom Repository"
 title_separator          : "-"
 name                     : &name "Sofyan Sahrom"
 description              : &description "Where the smart_mamat lives online"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sofyan Sahrom"
-  avatar           : "profile.png"
+  avatar           : "profile1.png"
   bio              : "PhD Candidate, Edith Cowan University | Athletic Development Specialist | Sports Scientist | Data Scientist | Passionate about maximising the use of Data"
   location         : "Perth, Western Australia"
   employer         : "Edith Cowan University"
