--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Sofyan Sahrom / Repository"
+title                    : "Sofyan Sahrom's Repository"
 title_separator          : "-"
 name                     : &name "Sofyan Sahrom"
 description              : &description "Where the smart_mamat lives online"
