--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Sofyan Sahrom"
-  avatar           : "profile.png"
+  avatar           : "profile1.png"
   bio              : "PhD Candidate, Edith Cowan University | Athletic Development Specialist | Sports Scientist | Data Scientist | Passionate about maximising the use of Data in Sport"
-=======
-  avatar           : "profile.png"
-  bio              : "PhD Candidate, Edith Cowan University | Athletic Development Specialist | Sports Scientist | Data Scientist | Passionate about maximising the use of Data"
   location         : "Perth, Western Australia"
   employer         : "Edith Cowan University"
   googlescholar    : 
