--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   orcid            : "https://orcid.org/0000-0003-1717-9679"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : "http://stackoverflow.com/users/9317617/sofyan-sahrom"
   steam            :
   tumblr           :
   twitter          : "GarangSof"
