Corrected Linkedin link
Corrected Linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   keybase          :
   instagram        : "smart_mamat"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/sofyansahrom"
+  linkedin         : "in/sofyansahrom"
   orcid            : "https://orcid.org/0000-0003-1717-9679"
   pinterest        :
   soundcloud       :
